--- a/package.json
+++ b/package.json
@@ -34,5 +34,9 @@
   },
   "bugs": {
     "email":"blog.jemmy.me@google.com"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jemmyzheng/fis3SmartyTool.git"
   }
 }
