--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "fis3SmartyTool",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "为简化项目其它前端人员对fis3-smarty解决方案的学习成本,对项目涉及的fis3的操作进行封装,并输出简化版的命令行控制器",
   "main": "index.js",
   "scripts": {
     "test": "mocha tests/*.test.js",
-    "deploy": ""
+    "patch": "npm version patch && sudo npm publish"
   },
   "keywords":[
     "fis",
@@ -22,6 +22,17 @@
     "es6-promise": "^3.2.1",
     "fis3": "^3.4.17",
     "fis3-command-release": "^1.3.8",
+    "fis3-preprocessor-extlang": "^1.1.4",
+    "fis-prepackager-widget-inline": "^0.0.9",
+    "fis-optimizer-smarty-xss": "^0.1.4",
+    "fis-optimizer-html-compress": "^0.0.7",
+    "fis-parser-bdtmpl": "^0.0.3",
+    "fis-parser-utc": "^0.0.2",
+    "fis-parser-less": "^0.1.2",
+    "fis-parser-po": "^0.0.1",
+    "fis-prepackager-js-i18n": "^0.0.2",
+    "fis3-hook-commonjs": "^0.1.22",
+    "fis3-server-smarty": "^0.0.6",
     "glob": "^7.0.5",
     "liftoff": "^2.2.5"
   },
