--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "fis-prepackager-widget-inline": "^0.0.9",
     "fis3": "^3.4.17",
     "fis3-command-release": "^1.3.8",
+    "fis3-command-server": "0.0.9",
     "fis3-hook-commonjs": "^0.1.22",
     "fis3-preprocessor-extlang": "^1.1.4",
     "fis3-server-smarty": "^0.0.6",
