--- a/package.json
+++ b/package.json
@@ -23,16 +23,16 @@
     "es6-promise": "^3.2.1",
     "fis-optimizer-html-compress": "^0.0.7",
     "fis-optimizer-smarty-xss": "^0.1.4",
-    "fis-parser-bdtmpl": "^0.0.3",
+    "fis-parser-handlebars-4.x": "^4.0.3",
     "fis-parser-less": "^0.1.2",
     "fis-parser-po": "^0.0.1",
-    "fis-parser-utc": "^0.0.2",
     "fis-prepackager-js-i18n": "^0.0.2",
     "fis-prepackager-widget-inline": "^0.0.9",
     "fis3": "^3.4.17",
     "fis3-command-release": "^1.3.8",
     "fis3-command-server": "0.0.9",
     "fis3-hook-commonjs": "^0.1.22",
+    "fis3-preprocessor-autoprefixer": "^0.1.0",
     "fis3-preprocessor-extlang": "^1.1.4",
     "fis3-server-smarty": "^0.0.6",
     "glob": "^7.0.5",
